# Marketing-Intelligence-Agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETE_PROJECT_GUIDE.md  CUsersSimonProject_Wifiaws_test_output.txt  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_prophet.py
.claude/: settings.local.json
.github/workflows/: ci.yml
aws/: iam-policy.json
data/chat_history/: 24a915c7.json  296d6c01.json  4200a617.json  5691995e.json  616e5f58.json  7d6aad83.json  881ac652.json  9356c84f.json  95f08c8d.json  96830ef7.json  97c97b40.json  9e0961d7.json  9ff1b325.json  d82a5384.json  e669d254.json  ff2a73e7.json
data/feedback/: feedback_history.jsonl  quality_model.pkl  vectorizer.pkl
docs/: project_plan.md
huggingface/: .env.example  README.md  app.py  requirements.txt
huggingface/src/: __init__.py
infrastructure/docker/: Dockerfile
presentation/: Marketing_Intelligence_Agent_Presentation.pptx
scripts/: create_presentation.py  create_report.py  prepare_hf_deployment.py  quick_aws_test.py  setup.ps1  setup_aws.py  start.ps1  stop.ps1  test.ps1  test_aws.py  test_comprehend.py  test_performance.py
src/agents/: forecast_agent.py  orchestrator.py  sales_agent.py  sentiment_agent.py
src/api/: main.py
src/app/: chat_history.py  streamlit_app.py  styles.css
src/aws/: __init__.py  bedrock.py  cache.py  cloudwatch.py  cognito.py  comprehend.py  forecast.py  lambda_handler.py  personalize.py  redis_cache.py  s3.py
src/config/: settings.py
src/data/: schema.py
terraform/: main.tf  terraform.tfvars.example
tests/: __init__.py
(+26 files in other folders)
